# core

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  annotated.html  audio__error_8h.html  audio__error_8h_source.html  basic__command_8h_source.html  battery__repository_8h.html  battery__repository_8h_source.html  canny__processor_8h.html  canny__processor_8h_source.html  classGPIO-members.html  classGPIO.html  classes.html  classgoliath_1_1audio_1_1context-members.html  classgoliath_1_1audio_1_1context.html  classgoliath_1_1audio_1_1device-members.html  classgoliath_1_1audio_1_1device.html  classgoliath_1_1audio_1_1microphone-members.html  classgoliath_1_1audio_1_1microphone.html  classgoliath_1_1commands_1_1BasicCommand-members.html  classgoliath_1_1commands_1_1BasicCommand.html  classgoliath_1_1commands_1_1Command-members.html  classgoliath_1_1commands_1_1Command.html  classgoliath_1_1commands_1_1CommandExecutor-members.html  classgoliath_1_1commands_1_1CommandExecutor.html  classgoliath_1_1commands_1_1CommandMap-members.html  classgoliath_1_1commands_1_1CommandMap.html  classgoliath_1_1commands_1_1DanceCommand-members.html  classgoliath_1_1commands_1_1DanceCommand.html  (+687 more)
doc/: CMakeLists.txt  Doxyfile  push_docs.sh
doc/pages/: structure.md
goliath/controller/: CMakeLists.txt  main.cpp
goliath/controller/commands/: command.h  command_map.h  move_command.h
goliath/controller/handles/: handle_map.cpp  handle_mutex.cpp  handle_mutex.h  handles.h
goliath/modules/caterpillar_movement/: CMakeLists.txt
goliath/modules/caterpillar_movement/src/: caterpillar_movement.cpp
goliath/modules/core/: CMakeLists.txt
goliath/modules/io/: CMakeLists.txt
goliath/modules/io/src/: zmq_io.cpp  zmq_publisher.cpp  zmq_subscriber.cpp
goliath/modules/vision/: CMakeLists.txt
goliath/modules/vision/src/: line_detector.cpp
src/: CMakeLists.txt  core.cpp  main.cpp  publisher.cpp  subscriber.cpp
src/commands/: CMakeLists.txt  move_command.cpp  move_command.h
src/controller/: CMakeLists.txt  command_executor.cpp  command_executor.h  command_map.cpp  command_map.h  command_runner.cpp  command_runner.h  commands.h  controller.cpp  handle_map.cpp  handle_map.h  handles.h
src/controller/commands/: basic_command.cpp  command.cpp  command.h  command_executor.cpp  command_executor.h  command_map.cpp  command_map.h  dance_command.cpp  dance_command.h  follow_line_command.cpp  follow_line_command.h  line_dance_command.cpp  move_command.cpp  move_command.h  move_tower_command.cpp  move_tower_command.h  move_wing_command.cpp  obstacle_course_command.cpp  queue_command.cpp  queue_command.h  transport_rebuild_command.cpp  wunderhorn_command.cpp  wunderhorn_command.h
src/controller/handles/: handle_map.cpp  handle_map.h  handle_mutex.cpp  handle_mutex.h  handles.h
src/controller/include/goliath/: CMakeLists.txt  controller.h
src/controller/resources/: controller-config.json  core-text.txt
src/controller/src/: CMakeLists.txt  command_executor.cpp  command_item.cpp  command_map.cpp  handle_map.cpp  watcher.cpp
src/controller/src/commands/: basic_command.cpp  command.cpp  dance_command.cpp  enter_command.cpp  grip_command.cpp  interrupt_command_command.cpp  invalidate_all_command.cpp  line_dance_command.cpp  move_arm_command.cpp  move_command.cpp  move_tower_command.cpp  move_wing_command.cpp  obstacle_course_command.cpp  queue_command.cpp  set_wing_position_command.cpp  shutdown_command.cpp  synchronize_battery_voltage_command.cpp  synchronize_commands_command.cpp  synchronize_system_status_command.cpp  transport_rebuild_command.cpp  wunderhorn_command.cpp
src/controller/src/repositories/: battery_repository.cpp  command_status_repository.cpp  config_repository.cpp  log_repository.cpp  system_status_repository.cpp
src/controller/util/: colored_console.cpp  colored_console.h  console.cpp  console.h
src/io/: CMakeLists.txt  zmq_publisher.cpp
src/modules/: CMakeLists.txt
src/modules/core/: CMakeLists.txt  handle.cpp  handle.h  handle_error.cpp  handle_error.h  publisher_service.h
src/modules/core/repositories/: battery_repository.cpp  battery_repository.h  proto_repository.h  repository.h  watcher.cpp  watcher.h
src/modules/dynamixel/: CMakeLists.txt  test.cpp
src/modules/emotions/: CMakeLists.txt  emotion_handle.cpp  emotion_handle.h  emotion_publisher.cpp  emotion_publisher.h
src/modules/emotions/src/: CMakeLists.txt  emotion_handle.cpp  emotion_publisher.cpp
src/modules/gpio/: CMakeLists.txt  gpio.cpp  gpio.h  test.cpp
src/modules/gpio/src/: CMakeLists.txt  gpio.cpp  gpio_handle.cpp
src/modules/i2c/: CMakeLists.txt  i2c_error.cpp  i2c_error.h  i2c_slave.cpp  i2c_slave.h  i2c_slave.tpp
src/modules/i2c/handles/: i2c_bus_handle.cpp  i2c_bus_handle.h  i2c_slave_handle.cpp  i2c_slave_handle.h
src/modules/io/: CMakeLists.txt  test.cpp  zmq_io.cpp  zmq_io.h  zmq_publisher.cpp  zmq_publisher.h  zmq_subscriber.cpp  zmq_subscriber.h
src/modules/led-controller/: CMakeLists.txt  led_controller.cpp  led_strip_controller.cpp
src/modules/led-strip-controller/: CMakeLists.txt
src/modules/messaging/: CMakeLists.txt  zmq_io.cpp  zmq_io.h  zmq_publisher.cpp  zmq_publisher.h  zmq_subscriber.cpp  zmq_subscriber.h
src/modules/motor-controller/: CMakeLists.txt  motor_controller.cpp  motor_handle.cpp
src/modules/openal/: CMakeLists.txt  context.cpp  context.h  device.cpp  device.h  microphone.cpp  microphone.h
src/modules/servo/: CMakeLists.txt  servo_handle.cpp  servo_handle.h  test.cpp
src/modules/transitions/: CMakeLists.txt
src/modules/vision/: CMakeLists.txt  color_detector.cpp  line_detector.cpp  vision.cpp  webcam.cpp  webcam.h  webcam_handle.cpp  webcam_handle.h
src/resources/: core-config.json  logo.txt
tests/: CMakeLists.txt  test_config.cpp  test_cup_distance.cpp  test_i2c.cpp  test_led_control.cpp  test_motor_controller.cpp  test_openal.cpp  test_test.cpp  test_vision.cpp  test_webcam.cpp  test_wing_controller.cpp
(+308 files in other folders)
